--- a/using-flask/Dockerfile
+++ b/using-flask/Dockerfile
@@ -1,6 +1,10 @@
 FROM python:3.6-buster
-WORKDIR /app
+WORKDIR /appflask
+ENV FLASK_APP=index:server
+ENV FLASK_RUN_HOST=0.0.0.0
+ENV FLASK_RUN_PORT=5001
 COPY requirements.txt .
 RUN pip install -r requirements.txt
+EXPOSE 5001
 COPY . .
-CMD ["python", "index.py"]
+CMD ["flask", "run"]
